config/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: contour
  name: profile-management
  namespace: default
spec:
  rules:
    - host: profile-management.tap.test-api-curation.tapdemo.vmware.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: profile-management
                port:
                  number: 80
